[package]
name = "rusty-http-fs"
version = "0.1.0"
edition = "2021"

[features]
sqlite = ["sqlx/sqlite"]

postgres = ["sqlx/postgres"]

[dependencies]
config = "0.14"
tokio = { version = "1.0", features = ["full"] }
actix-web = { version = "4.9.0" }
serde = { version = "1.0.199" }
serde_json = { version = "1.0.128" }
derive_more = { version = "1.0.0", features = ["full"] }
dirs = { version = "5.0.1" }
uuid = { version = "1.10.0", features = ["v7", "v4", "serde"] }
bitflags = { version = "2.6.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
chrono = { version = "0.4.38", features = ["serde"] }
mime = { version = "0.3.17" }
